[package]
name = "nanoserde-bench"
version = "0.1.0"
authors = ["Fedor Logachev <not.fl3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiled-nanoserde = { path = "./tiled-nanoserde", optional = true }
tiled-serde = { path = "./tiled-serde", optional = true }