[package]
name = "nanoserde-bench"
version = "0.1.0"
authors = ["Fedor Logachev <not.fl3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
nano-bin = ["nanoserde"]
serde-bin = [ "serde", "bincode" ]

[dependencies]
tiled-nanoserde = { path = "./tiled-nanoserde", optional = true }
tiled-serde = { path = "./tiled-serde", optional = true }

nanoserde = {version = "0.1", optional = true}

bincode = { version = "1.3", optional = true }
serde = {version = "1.0", features = ["derive"], optional = true }

[profile.release.build-override]
opt-level = 0
